Fixes spacing issue with tags

--- a/src/assets/css/_styling.scss
+++ b/src/assets/css/_styling.scss
@@ -65,13 +65,13 @@ body {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  gap: 0.5rem;
   margin-bottom: 1rem;
 }
 
 .tag {
     display: flex;
     align-items: center;
-    margin-right: 1rem;
     padding: 0.25rem 0.5rem;
     background-color: #fff;
     border: 1px solid #1b68d562;
